force-app/main/default/objects/ReportOmniScript__c/ReportOmniScript__c.object-meta.xml
<CustomObject>
    <description>Copy of the Active OmniScript and Integration Procedures for Reporting purpose</description>
    <label>Report OmniScript</label>
    <nameField>
        <label>OmniScript</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report OmniScripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>