force-app/main/default/objects/ReportOmniScript__c/fields/HasElementTypeToHTMLTemplateMapping__c.field-meta.xml
<CustomField>
    <fullName>HasElementTypeToHTMLTemplateMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the OmniScript has an Element Type To HTML Template Mapping defined. We will not copy the whole Mapping due to text length.</description>
    <label>Has Top Level HTML Template</label>
    <type>Checkbox</type>
</CustomField>