force-app/main/default/objects/ReportOmniScript__c/fields/HasElementTypeToLwcTemplateMapping__c.field-meta.xml
<CustomField>
    <fullName>HasElementTypeToLwcTemplateMapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the OmniScript has an Element Type To LWC Component Mapping defined. We will not copy the whole Mapping due to text length.</description>
    <label>Has Top Level LWC Override</label>
    <type>Checkbox</type>
</CustomField>