force-app/main/default/objects/ReportOmniScript__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <description>Copy from the Vlocity OmniScript field. The original field is a picklist which provides limited choices to select.</description>
    <label>SubType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>