force-app/main/default/objects/ReportOmniScript__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <description>Type_SubType_Language. Used as a foreign key for the Report Elements.</description>
    <externalId>true</externalId>
    <label>Unique Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>