force-app/main/default/objects/ReportOmniScript__c/fields/VlocityOmniScript__c.field-meta.xml
<CustomField>
    <fullName>VlocityOmniScript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual OmniScript</description>
    <label>Vlocity OmniScript</label>
    <referenceTo>vlocity_cmt__OmniScript__c</referenceTo>
    <relationshipLabel>Report OmniScripts</relationshipLabel>
    <relationshipName>ReportingOmniScript</relationshipName>
    <type>Lookup</type>
</CustomField>